# Tactility

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.md  README.md  SECURITY.md  build.sh  clean.sh  device.py  lv_conf.h  partitions-16mb.csv  partitions-4mb.csv  partitions-8mb.csv  partitions.csv  run.sh  runtests.sh  sdkconfig.board.btt-panda-k-touch  sdkconfig.board.btt-panda-touch  sdkconfig.board.cyd-2432S024c  sdkconfig.board.cyd-2432S032c  sdkconfig.board.cyd-2432s022c  sdkconfig.board.cyd-2432s024c  sdkconfig.board.cyd-2432s028r  sdkconfig.board.cyd-2432s028rv3  sdkconfig.board.cyd-2432s032c  sdkconfig.board.cyd-4848s040c  sdkconfig.board.cyd-8048S043c  sdkconfig.board.cyd-8048s043c  sdkconfig.board.cyd-e32r28t  sdkconfig.board.cyd-e32r32p  sdkconfig.board.cyd-jc2432w328c  sdkconfig.board.cyd-jc8048w550c  sdkconfig.board.elecrow-crowpanel-advance-28  sdkconfig.board.elecrow-crowpanel-advance-35  sdkconfig.board.elecrow-crowpanel-advance-50  sdkconfig.board.elecrow-crowpanel-basic-28  (+36 more)
App/: CMakeLists.txt  Kconfig  idf_component.yml
App/Source/: Boards.h  Main.cpp
AppEsp32/: CMakeLists.txt
AppEsp32/Source/: Boards.h  Main.cpp
AppSim/: CMakeLists.txt
AppSim/Source/: FreeRTOSConfig.h  freertos.cpp  hardware_config.cpp  lvgl_hal.cpp  lvgl_hal.h  lvgl_task.cpp  main.cpp  power.cpp
Boards/LilygoTdisplayS3/: CMakeLists.txt
Boards/Simulator/: CMakeLists.txt
Buildscripts/CMake/: CMakeLists.txt  TactilitySDK.cmake
Drivers/Trackball/: CMakeLists.txt
Drivers/XPT2046-SoftSPI/: CMakeLists.txt  README.md  SoftSPI.cpp  SoftSPI.h  XPT2046-SoftSPI.cpp  XPT2046-SoftSPI.h  XPT2046_TouchscreenSOFTSPI.cpp  XPT2046_TouchscreenSOFTSPI.h  keywords.txt  library.json  library.properties
Firmware/: CMakeLists.txt  Kconfig  Kconfig.template  idf_component.yml
Firmware/Source/: Boards.h  Main.cpp
Libraries/QRCode/: CMakeLists.txt
Libraries/cJSON/: CMakeLists.txt  README.md
Libraries/lv_screenshot/: CMakeLists.txt
Libraries/minitar/: CMakeLists.txt
Libraries/minmea/: CMakeLists.txt
Tactility/: CMakeLists.txt
Tactility/Include/: Tactility.h  TactilityConfig.h
Tactility/Private/: App_i.h
Tactility/Source/: App.cpp  App.h  AppManifest.h  AppManifestRegistry.cpp  AppManifestRegistry.h  BootProperties.cpp  LvglInit.cpp  MountPoints.cpp  PartitionsEsp.cpp  Paths.cpp  PreferencesEsp.cpp  PreferencesMock.cpp  Tactility.cpp  Tactility.h  TactilityConfig.h  TactilityEsp.cpp  TactilityHeadless.cpp  TactilityHeadlessEsp.cpp
TactilityC/: CMakeLists.txt
TactilityC/Include/: tt_app.h  tt_app_alertdialog.h  tt_app_manifest.h  tt_bundle.h  tt_file.h  tt_gps.h  tt_hal.h  tt_hal_device.h  tt_hal_display.h  tt_hal_gpio.h  tt_hal_i2c.h  tt_hal_touch.h  tt_hal_uart.h  tt_kernel.h  tt_lock.h  tt_lvgl.h  tt_lvgl_keyboard.h  tt_lvgl_toolbar.h  tt_message_queue.h  tt_mutex.h  tt_preferences.h  tt_semaphore.h  tt_thread.h  tt_time.h  tt_timer.h  tt_wifi.h
TactilityC/Private/: tt_lock_private.h
TactilityC/Source/: tt_app.cpp  tt_app.h  tt_app_alertdialog.cpp  tt_app_alertdialog.h  tt_app_context.cpp  tt_app_context.h  tt_app_manifest.cpp  tt_app_manifest.h  tt_app_selectiondialog.cpp  tt_app_selectiondialog.h  tt_bundle.cpp  tt_bundle.h  tt_file.cpp  tt_gps.cpp  tt_hal.cpp  tt_hal_device.cpp  tt_hal_display.cpp  tt_hal_gpio.cpp  tt_hal_i2c.cpp  tt_hal_i2c.h  tt_hal_touch.cpp  tt_hal_uart.cpp  tt_init.cpp  tt_init.h  tt_kernel.cpp  tt_lock.cpp  tt_lvgl.cpp  tt_lvgl_keyboard.cpp  tt_lvgl_spinner.cpp  tt_lvgl_spinner.h  tt_lvgl_toolbar.cpp  tt_lvgl_toolbar.h  tt_message_queue.cpp  tt_message_queue.h  tt_mutex.cpp  tt_mutex.h  tt_preferences.cpp  tt_semaphore.cpp  tt_semaphore.h  tt_service_loader.cpp  (+7 more)
TactilityCore/: CMakeLists.txt  README.md
TactilityCore/Include/: Check.h  Dispatcher.h  EventFlag.h  LogMessages.h  RtosCompatTask.h  Thread.h
TactilityCore/Source/: ApiLock.h  Bundle.cpp  Bundle.h  Check.cpp  Check.h  CoreDefines.h  CoreExtraDefines.h  CoreTypes.h  CpuAffinity.cpp  Critical.cpp  Critical.h  Crypt.h  Dispatcher.cpp  Dispatcher.h  DispatcherThread.cpp  DispatcherThread.h  EventFlag.cpp  EventFlag.h  Hash.cpp  Kernel.cpp  Kernel.h  Lock.cpp  Lockable.cpp  Lockable.h  Log.cpp  Log.h  LogEsp.cpp  LogSimulator.cpp  MessageQueue.cpp  MessageQueue.h  Mutex.cpp  Mutex.h  PubSub.cpp  PubSub.h  Pubsub.cpp  Pubsub.h  RtosCompat.h  RtosCompatEventGroups.h  Semaphore.cpp  Semaphore.h  (+9 more)
TactilityFreeRtos/: CMakeLists.txt  README.md
TactilityHeadless/: CMakeLists.txt
TactilityHeadless/Include/: TactilityHeadless.h
TactilityHeadless/Private/: EspInit.h  EspPartitions_i.h
TactilityHeadless/Source/: Assets.h  EspInit.cpp  EspPartitions.cpp  EspPartitions.h  PartitionsEsp.cpp  Preferences.h  PreferencesEsp.cpp  PreferencesMock.cpp  Service.cpp  Service.h  ServiceManifest.h  ServiceRegistry.cpp  ServiceRegistry.h  TactilityHeadless.cpp  TactilityHeadless.h  TactilityHeadlessEsp.cpp
Tests/: CMakeLists.txt
Tests/Tactility/: CMakeLists.txt  HalDeviceTest.cpp  Main.cpp  PropertiesFileTest.cpp  UrlTest.cpp
Tests/TactilityCore/: BundleTest.cpp  CMakeLists.txt  DispatcherTest.cpp  DispatcherThreadTest.cpp  FileTest.cpp  LockTest.cpp  LockableTest.cpp  Main.cpp  MessageQueueTest.cpp  MutexTest.cpp  ObjectFileTest.cpp  PropertiesFileTest.cpp  PubSubTest.cpp  SemaphoreTest.cpp  StringTest.cpp  TestFile.h  ThreadTest.cpp  TimerTest.cpp
Tests/TactilityFreeRtos/: CMakeLists.txt  DispatcherTest.cpp  DispatcherThreadTest.cpp  LockTest.cpp  Main.cpp  MessageQueueTest.cpp  MutexTest.cpp  PubSubTest.cpp  RecursiveMutexTest.cpp  SemaphoreTest.cpp  ThreadTest.cpp  TimerTest.cpp
Tests/TactilityHeadless/: CMakeLists.txt  HalDeviceTest.cpp
app-esp/: CMakeLists.txt  Kconfig  idf_component.yml
app-esp/src/: Main.cpp  board_config.h  main.c
app-sim/: CMakeLists.txt
app-sim/src/: FreeRTOSConfig.h  (+16 more)
main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
tactility/: CMakeLists.txt
tactility-core/: CMakeLists.txt
tactility-esp/: CMakeLists.txt
tactility-headless/: CMakeLists.txt
tactility-service/: CMakeLists.txt
(+2787 files in other folders)
